Updating servlet-api dependency to jakarta.servlet-api:5.0.0 and disabling spark UI in test sessions.