@@ -5,7 +5,7 @@
  * Bunsen is copyright 2017 Cerner Innovation, Inc., and is licensed under
  * the Apache License, version 2.0 (http://www.apache.org/licenses/LICENSE-2.0).
  *
- * These modifications are copyright 2018-2025 Commonwealth Scientific 
+ * These modifications are copyright 2018-2025 Commonwealth Scientific
  * and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -326,10 +326,10 @@ public class LightweightFhirEncodersTest implements JsonMethods {
     final Row deviceRow = rowEncoder.createDeserializer().apply(serializedRow);
 
     final List<Row> properties = deviceRow.getList(deviceRow.fieldIndex("property"));
-    final Row propertyRow = properties.get(0);
+    final Row propertyRow = properties.getFirst();
     final List<Row> quantityArray = propertyRow.getList(propertyRow.fieldIndex("valueQuantity"));
 
-    final Row quantity1 = quantityArray.get(0);
+    final Row quantity1 = quantityArray.getFirst();
     assertQuantity(quantity1, "0.0010", "m");
 
     final Row quantity2 = quantityArray.get(1);
